# Hacker-Mode

./: .gitattributes  Cargo.toml  Hacker-Mode.desktop  LICENSE  Makefile  README.md  build.hacker  build.hl  config_manager.py  index.html  launchers.js  launchers.py  main.js  main.py  main_window.py  package.json  remove.hacker  settings.html  settings.js  settings.py  styles.qss  tauri.conf.json  unpack.hacker  unpack.hl  utils.js  utils.py
archived/: main.py
capabilities/: default.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: import.rs  kill.rs  launch.rs  list.rs  mod.rs  network.rs  perf.rs  power.rs  proton.rs  running.rs
composer/: Cargo.toml  cursor.cpp  cursor.hpp  drawing.cpp  drawing.hpp  drm.cpp  focus.cpp  focus.hpp  main.c  main.cpp  meson.build  render.cpp  render.hpp  shell.cpp  shell.hpp  state.cpp  state.hpp  udev.hpp  wayland.cpp  wayland.hpp  x11.cpp  x11.hpp
composer/src/: drawning.rs  main.rs  state.rs  udev.rs  winit.rs  x11.rs
compositor/: Cargo.toml
compositor/src/: main.rs
compositor/src/core/: mod.rs  state.rs
compositor/src/drm/: mod.rs
compositor/src/xwayland/: mod.rs
core/: Cargo.toml
core/migrations/: 0001_initial.sql
core/src/: lib.rs
core/src/auth/: tokens.rs
core/src/db/: games.rs  mod.rs  playtime.rs
core/src/imports/: mod.rs
core/src/ipc/: protocol.rs  server.rs
core/src/perf/: mod.rs  monitor.rs
core/src/runner/: mod.rs  process.rs  proton.rs
core/src/settings/: config.rs  mod.rs  network.rs  power.rs
core/src/store/: amazon.rs  epic.rs  gog.rs  itchio.rs  lutris.rs  mod.rs  steam.rs
packaging/: hacker-mode-session  hacker-mode.desktop
source-code/: App.tsx  Cargo.toml  Hacker-Mode.cr  Hacker-Mode.hacker  config_manager.py  game_manager.py  index.html  launchers.js  launchers.py  main.js  main.py  main_window.py  meson.build  package.json  preload.js  proton_manager.py  settings.py  styles.css  types.ts  utils.js  utils.py  vite.config.ts
source-code/components/: Launcher.tsx  PowerMenu.tsx  Settings.tsx  StatusBar.tsx
source-code/components/ui/: Button.tsx  Slider.tsx  Toggle.tsx
source-code/compositor/: main.cpp
source-code/electron/: main.js
source-code/services/: systemService.ts  systemService.tsx
source-code/settings/: Cargo.toml  main.py
source-code/src/: App.tsx  app.js  constants.tsx  main.vala  types.ts
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/src/: main.rs
source-code/src/services/: gameImportService.ts  systemService.ts
source-code/src/styles/: output.css
src/: cli.rs  commands.rs  main.rs
system/: hackeros-hm-compositor.service  hackeros-hm-ui.service  hackeros-hm.target
systemd/: hacker-mode.service
ui/: Cargo.toml  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/components/: GameCard.svelte  HackerMenu.svelte  Sidebar.svelte  StoreWebview.svelte  TopBar.svelte
ui/src/lib/routes/: Library.svelte  Settings.svelte  Store.svelte
ui/src/lib/routes/settings/: Audio.svelte  Bluetooth.svelte  Brightness.svelte  Language.svelte  Power.svelte  Timezone.svelte  Wifi.svelte  shared.css
ui/src/lib/stores/: library.ts  nav.ts
ui/ui/: app.slint  theme.slint
ui/ui/components/: bottom_bar.slint  game_card.slint  hacker_menu.slint  perf_overlay.slint  sidebar.slint  top_bar.slint
ui/ui/screens/: downloads.slint  game_detail.slint  library.slint  settings.slint  store_browser.slint
