[package]
name = "hacker-mode"
version = "0.1.0"
description = "Niezależny tryb Big Picture: Steam/Epic/GOG/Amazon + własny kompozytor"
edition = "2021"
default-run = "hacker-mode"

[[bin]]
name = "hacker-mode"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
walkdir = "2"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Bluetooth (BlueZ przez D-Bus)
bluer = { version = "0.17", features = ["bluetoothd"] }
zbus = "4"

# --- kompozytor (tylko w trybie "default") ---
smithay = { version = "0.4", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",     # zapasowy backend do developmentu w oknie
    "wayland_frontend",
    "xwayland",
    "renderer_gl",
] }
calloop = "0.13"

[profile.release]
lto = true
opt-level = 3
strip = true
