[package]
name        = "hm-cli"
description = "HackerOS Hacker Mode – CLI tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hm"
path = "src/main.rs"

[dependencies]
hm-core    = { path = "../core" }
tokio      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }
dirs       = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
