[package]
name = "Hacker-Mode-Compositor"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HackerOS Team <hackeros068@gmail.com>"]

[dependencies]
bitflags = "2.2.1"
image = {version = "0.25.1", default-features = false, features = ["png"], optional = true}
rand = "0.8"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1"
xcursor = { version = "0.3.3", optional = true }
xkbcommon = "0.8.0"
renderdoc = "0.11.0"
smithay-drm-extras = "0.1.0"
profiling = "1.0"

[dependencies.smithay]
version = "0.7.0"
features = ["desktop", "wayland_frontend", "use_system_lib", "backend_egl", "backend_libinput", "backend_udev", "backend_drm", "backend_gbm", "backend_vulkan", "backend_session_libseat", "renderer_gl", "renderer_pixman", "renderer_multi", "xwayland", "x11rb_event_source"]

[dependencies.x11rb]
default-features = false
features = ["composite"]
version = "0.13.0"
optional = true

[build-dependencies]
gl_generator = "0.14"

[features]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/backend_egl"]
udev = ["image", "xcursor"]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "x11rb", "xcursor"]
renderer_sync = []

