[package]
name        = "hm-compositor"
description = "HackerOS Hacker Mode – Wayland compositor (Smithay)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hm-compositor"
path = "src/main.rs"

[dependencies]
hm-core = { path = "../core" }

tokio    = { workspace = true }
futures  = { workspace = true }
smithay  = { workspace = true }
calloop  = { workspace = true }
wayland-server    = { workspace = true }
wayland-protocols = { workspace = true }
xkbcommon         = { workspace = true }
drm               = { workspace = true }
gbm               = { workspace = true }
input             = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }
dirs       = { workspace = true }
libc       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
