[package]
name        = "hm-core"
description = "HackerOS Hacker Mode – core business logic"
workspace   = ".."

[lib]
name = "hm_core"

[dependencies]
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }

reqwest  = { workspace = true }
oauth2   = { workspace = true }
url      = { workspace = true }

sqlx        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }

zbus        = { workspace = true }
keyring     = { workspace = true }
dirs        = { workspace = true }
time        = { workspace = true }
uuid        = { workspace = true }
regex       = { workspace = true }
notify      = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
