[package]
name        = "hm-core"
description = "HackerOS Hacker Mode – core business logic"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lib]
name = "hm_core"

[dependencies]
tokio        = { workspace = true }
futures      = { workspace = true }

reqwest    = { workspace = true }
oauth2     = { workspace = true }
url        = { workspace = true }

sqlx       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml       = { workspace = true }

zbus       = { workspace = true }
keyring    = { workspace = true }
dirs       = { workspace = true }
uuid       = { workspace = true }
regex      = { workspace = true }
notify     = { workspace = true }
which      = { workspace = true }
libc       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
