[package]
name        = "hm-ui"
description = "HackerOS Hacker Mode – UI (Slint + WRY)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hm-ui"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.7"

[dependencies]
hm-core = { path = "../core" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
slint        = { workspace = true }
wry          = { workspace = true }
tao          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
dirs         = { workspace = true }
libc         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
