[package]
name = "hacker-mode"
version = "1.0.0"
description = "Hacker Mode Launcher"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
